packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_array_put_slicePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_QUAD>,
              ffi.Pointer<ISC_ARRAY_DESC>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ISC_LONG>)>>('isc_array_put_slice');
  late final _isc_array_put_slice = _isc_array_put_slicePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_QUAD>,
          ffi.Pointer<ISC_ARRAY_DESC>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ISC_LONG>)>();

  void isc_blob_default_desc(
    ffi.Pointer<ISC_BLOB_DESC> arg0,
    ffi.Pointer<ISC_UCHAR> arg1,
    ffi.Pointer<ISC_UCHAR> arg2,
  ) {
    return _isc_blob_default_desc(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_blob_default_descPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ISC_BLOB_DESC>, ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_UCHAR>)>>('isc_blob_default_desc');
  late final _isc_blob_default_desc = _isc_blob_default_descPtr.asFunction<
      void Function(ffi.Pointer<ISC_BLOB_DESC>, ffi.Pointer<ISC_UCHAR>,
          ffi.Pointer<ISC_UCHAR>)>();

  int isc_blob_gen_bpb(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_BLOB_DESC> arg1,
    ffi.Pointer<ISC_BLOB_DESC> arg2,
    int arg3,
    ffi.Pointer<ISC_UCHAR> arg4,
    ffi.Pointer<ffi.Uint16> arg5,
  ) {
    return _isc_blob_gen_bpb(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_blob_gen_bpbPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_BLOB_DESC>,
              ffi.Pointer<ISC_BLOB_DESC>,
              ffi.Uint16,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ffi.Uint16>)>>('isc_blob_gen_bpb');
  late final _isc_blob_gen_bpb = _isc_blob_gen_bpbPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<ISC_BLOB_DESC>,
          ffi.Pointer<ISC_BLOB_DESC>,
          int,
          ffi.Pointer<ISC_UCHAR>,
          ffi.Pointer<ffi.Uint16>)>();

  int isc_blob_info(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_blob_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
  ) {
    return _isc_blob_info(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_blob_infoPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_blob_info');
  late final _isc_blob_info = _isc_blob_infoPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_blob_handle>, int,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_blob_lookup_desc(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<ISC_UCHAR> arg3,
    ffi.Pointer<ISC_UCHAR> arg4,
    ffi.Pointer<ISC_BLOB_DESC> arg5,
    ffi.Pointer<ISC_UCHAR> arg6,
  ) {
    return _isc_blob_lookup_desc(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_blob_lookup_descPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_BLOB_DESC>,
              ffi.Pointer<ISC_UCHAR>)>>('isc_blob_lookup_desc');
  late final _isc_blob_lookup_desc = _isc_blob_lookup_descPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<ISC_UCHAR>,
          ffi.Pointer<ISC_UCHAR>,
          ffi.Pointer<ISC_BLOB_DESC>,
          ffi.Pointer<ISC_UCHAR>)>();

  int isc_blob_set_desc(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<ISC_UCHAR> arg1,
    ffi.Pointer<ISC_UCHAR> arg2,
    int arg3,
    int arg4,
    int arg5,
    ffi.Pointer<ISC_BLOB_DESC> arg6,
  ) {
    return _isc_blob_set_desc(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_blob_set_descPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Int16,
              ffi.Int16,
              ffi.Int16,
              ffi.Pointer<ISC_BLOB_DESC>)>>('isc_blob_set_desc');
  late final _isc_blob_set_desc = _isc_blob_set_descPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<ISC_UCHAR>,
          ffi.Pointer<ISC_UCHAR>, int, int, int, ffi.Pointer<ISC_BLOB_DESC>)>();

  int isc_cancel_blob(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_blob_handle> arg1,
  ) {
    return _isc_cancel_blob(
      arg0,
      arg1,
    );
  }

  late final _isc_cancel_blobPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_blob_handle>)>>('isc_cancel_blob');
  late final _isc_cancel_blob = _isc_cancel_blobPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_blob_handle>)>();

  int isc_cancel_events(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<ISC_LONG> arg2,
  ) {
    return _isc_cancel_events(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_cancel_eventsPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<ISC_LONG>)>>('isc_cancel_events');
  late final _isc_cancel_events = _isc_cancel_eventsPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>,
          ffi.Pointer<ISC_LONG>)>();

  int isc_close_blob(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_blob_handle> arg1,
  ) {
    return _isc_close_blob(
      arg0,
      arg1,
    );
  }

  late final _isc_close_blobPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_blob_handle>)>>('isc_close_blob');
  late final _isc_close_blob = _isc_close_blobPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_blob_handle>)>();

  int isc_commit_retaining(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
  ) {
    return _isc_commit_retaining(
      arg0,
      arg1,
    );
  }

  late final _isc_commit_retainingPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>)>>('isc_commit_retaining');
  late final _isc_commit_retaining = _isc_commit_retainingPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>)>();

  int isc_commit_transaction(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
  ) {
    return _isc_commit_transaction(
      arg0,
      arg1,
    );
  }

  late final _isc_commit_transactionPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>)>>('isc_commit_transaction');
  late final _isc_commit_transaction = _isc_commit_transactionPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_tr_handle>)>();

  int isc_create_blob(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<isc_blob_handle> arg3,
    ffi.Pointer<ISC_QUAD> arg4,
  ) {
    return _isc_create_blob(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_create_blobPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Pointer<ISC_QUAD>)>>('isc_create_blob');
  late final _isc_create_blob = _isc_create_blobPtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_blob_handle>,
          ffi.Pointer<ISC_QUAD>)>();

  int isc_create_blob2(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<isc_blob_handle> arg3,
    ffi.Pointer<ISC_QUAD> arg4,
    int arg5,
    ffi.Pointer<ISC_SCHAR> arg6,
  ) {
    return _isc_create_blob2(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_create_blob2Ptr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Pointer<ISC_QUAD>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_create_blob2');
  late final _isc_create_blob2 = _isc_create_blob2Ptr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_db_handle>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_blob_handle>,
          ffi.Pointer<ISC_QUAD>,
          int,
          ffi.Pointer<ISC_SCHAR>)>();

  int isc_create_database(
    ffi.Pointer<ISC_STATUS> arg0,
    int arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    ffi.Pointer<isc_db_handle> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
    int arg6,
  ) {
    return _isc_create_database(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_create_databasePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Pointer<isc_db_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16)>>('isc_create_database');
  late final _isc_create_database = _isc_create_databasePtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, int, ffi.Pointer<ISC_SCHAR>,
          ffi.Pointer<isc_db_handle>, int, ffi.Pointer<ISC_SCHAR>, int)>();

  int isc_database_info(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
  ) {
    return _isc_database_info(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_database_infoPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_db_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_database_info');
  late final _isc_database_info = _isc_database_infoPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_db_handle>, int,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<ISC_SCHAR>)>();

  void isc_decode_date(
    ffi.Pointer<ISC_QUAD> arg0,
    ffi.Pointer<ffi.Void> arg1,
  ) {
    return _isc_decode_date(
      arg0,
      arg1,
    );
  }
